deploy/manifests/cloudeye-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudeye-exporter
  namespace: monitoring
  annotations:
    prometheus.io/port: '8087'
    prometheus.io/scrape: 'true'
    prometheus.io/path: "/metrics"
    prometheus.io/scheme: "http"
  labels:
    app: cloudeye-exporter
spec:
  selector:
    app: cloudeye-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 8087
      targetPort: 8087
  type: ClusterIP
